<resources>
    <string name="app_name">MathGame</string>
    <string name="user_image">User Image</string>
    <string name="user_name">Username</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="upload_image">Upload Image</string>
    <string name="single_player">Single Player</string>
    <string name="multi_player">MultiPlayer</string>
    <string name="Top5">Top 5</string>
    <string name="level">Level</string>
    <string name="points">Points</string>
    <string name="time">Time</string>
    <string name="levelcomplete">Level Completed</string>
    <string name="levelcompleted">Level Completed</string>
    <string name="time_left">Time Left</string>
    <string name="pause">Pause</string>
    <string name="giveup">Give Up?</string>
    <string name="giveupMessage">Do you really wish to give up?</string>
    <string name="guOK">YES</string>
    <string name="guNOK">NO</string>
    <string name="must_have_user">You must save a user</string>
    <string name="profile_not_found">No profile to load</string>
    <string name="choose_multiplayer_mode">Choose mode</string>
    <string name="server_mode">Server</string>
    <string name="client_mode">Client</string>
    <string name="msg_ip_address">Server IP address: %s\nWaiting for a client…</string>
    <string name="ask_ip">Insert Ip</string>
    <string name="error_address">Field is empty or not match with ip</string>
    <string name="btn_emulator">Connect to emulator</string>
    <string name="button_connect">Connect</string>
    <string name="button_cancel">Cancel</string>
    <string name="profileimage">profile image</string>
    <string name="profileUsername">profileUsername</string>
    <string name="profilePhoto">profilePhoto</string>
    <string name="clearSharedPrefs">Clear Profile</string>
    <string name="start">Start</string>
    <string name="num_of_clients">Number of clients</string>
    <string name="client_waiting_dlg">Waiting for server to start the game</string>
    <string name="next_multi_level">You complete the level, now you should wait for other players</string>
    <string name="congrats">Congratulations</string>
    <string name="game_over">Game Over</string>
    <string name="main_menu">Main Menu</string>
    <string name="connection_lost">Connection Lost</string>

    <string name="exit">Exit</string>
    <string name="boards">Boards</string>

    <string name="choose_leaderboard">Choose Leaderboard</string>
    <string name="multi_player_pts">MultiPlayer Points</string>
    <string name="multi_player_time">MultiPlayer Time</string>
    <string name="sp_leaderboard">Single Player Leaderboard</string>
    <string name="mp_leaderboard">Multi Player Leaderboard</string>
    <string name="mp_leaderboard_points">Highest Scores</string>
    <string name="mp_leaderboard_time">Highest Elapsed Time</string>
    <string name="mp_leaderboard_players">Players</string>
    <string name="resume">Resume</string>
    <string name="winner">Winner</string>
    <string name="cancel">Cancel</string>
    <string name="credits">Credits</string>
    <string name="authors">Authors</string>
    <string name="authors_name">Daniel Fernandes</string>
    <string name="authors_name2">Hugo Jorge</string>
    <string name="author1photo">Author 1 Image</string>
    <string name="nothing_reponse" />
    <string name="right_answers">Correct</string>
    <string name="second_answers">Almost</string>
    <string name="wrong_response">Wrong</string>
    <string name="fail_save_firestore">Fail save your game</string>
    <string name="connection_failed">Connection Failed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="will_start">Game will start soon</string>

</resources>