<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:padding="30dp">

    <TextView
        android:id="@+id/tvGameOver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/game_over"/>
    <TextView
        android:id="@+id/tvGameOverLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvGameOver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:text="@string/level"/>
    <TextView
        android:id="@+id/tvGameOverPoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvGameOverLevel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:text="@string/points"/>

    <Button
        android:id="@+id/btn_gameover_menu"
        android:layout_width="130dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/tvGameOverPoints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:background="@color/material_dynamic_neutral30"
        android:text="@string/main_menu"
        android:textColor="@color/white"/>


</androidx.constraintlayout.widget.ConstraintLayout>