<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragments.Top5Option"
    android:id="@+id/fragment_top5_option"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_choose_leaderboard"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/choose_leaderboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/text"
        android:gravity="center"
        app:layout_constraintVertical_bias="0.10"
        android:textSize="30sp"/>
    <Button
        android:id="@+id/btn_sp_top5"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/single_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_leaderboard"
        android:layout_marginTop="60dp"/>
    <Button
        android:id="@+id/btn_mp_top5_pts"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/multi_player_pts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sp_top5"
        android:layout_marginTop="60dp"/>
    <Button
        android:id="@+id/btn_mp_top5_time"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/multi_player_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_mp_top5_pts"
        android:layout_marginTop="60dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>