<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MultiplayerOption"
    android:background="@color/background"
    android:id="@+id/fragment_multiplayer_option">


    <TextView
        android:id="@+id/title_choose_mode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/choose_multiplayer_mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/text"
        android:gravity="center"
        app:layout_constraintVertical_bias="0.10"
        android:textSize="30sp"/>
    <Button
        android:id="@+id/btn_server_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_choose_mode"
        android:layout_marginTop="60dp"/>
    <Button
        android:id="@+id/btn_client_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_server_mode"
        android:layout_marginTop="60dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>