<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.UserProfile"
    android:background="@color/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/photoIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textSize="32sp"
        android:text="@string/profile"/>

<!--    <androidx.cardview.widget.CardView-->
<!--        android:id="@+id/photo"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="200dp"-->
<!--        android:background="#6FFFFFFF"-->
<!--        app:cardCornerRadius="100dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintCircleRadius="300dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.30"-->
<!--        android:contentDescription="@string/user_image"-->
<!--        >-->
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30"
        android:id="@+id/photoIn"
        android:background="@drawable/round_shape"
        android:contentDescription="@string/profileimage" />

    <Button
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:id="@+id/profile_upload_image"
        app:layout_constraintTop_toBottomOf="@id/photoIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/upload_image"
        android:textSize="11sp"/>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_upload_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:background="#6FFFFFFF"
        android:orientation="vertical"
        android:id="@+id/editLayout">

        <EditText
            android:id="@+id/edit_user_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="#6FB6B2B2"
            android:hint="@string/user_name"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColorHint="#6D4C41" />
    </LinearLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/editLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/save"
        android:id="@+id/user_profile_btn_save"
        />
</androidx.constraintlayout.widget.ConstraintLayout>