<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">
        <ImageView
            android:id="@+id/itemPhoto"
            android:src="@android:drawable/ic_menu_gallery"
            android:layout_width="40dp"
            android:layout_height="40dp"
            />
        <TextView
            android:padding="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:autoSizeTextType="uniform"
            app:autoSizeMaxTextSize="16sp"
            app:autoSizeMinTextSize="12sp"
            android:maxLines="1"
            android:gravity="center_vertical"
            android:text="@string/user_name"
            android:id="@+id/item_tv_name"
            android:textColor="@color/white"
            android:background="@color/black"/>
        <TextView
            android:padding="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:autoSizeTextType="uniform"
            app:autoSizeMaxTextSize="16sp"
            app:autoSizeMinTextSize="12sp"
            android:maxLines="1"
            android:gravity="center_vertical"
            android:text="@string/time"
            android:id="@+id/item_tv_time"
            android:textColor="@color/white"
            android:background="@color/black"/>
        <TextView
            android:padding="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:autoSizeTextType="uniform"
            app:autoSizeMaxTextSize="16sp"
            app:autoSizeMinTextSize="12sp"
            android:maxLines="1"
            android:gravity="center_vertical"
            android:text="@string/points"
            android:id="@+id/item_tv_points"
            android:textColor="@color/white"
            android:background="@color/black"/>

    </LinearLayout>

</FrameLayout>