<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SinglePlayerActivity"
    android:background="@color/background">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/game_level"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/game_pont"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/level"/>
    <TextView
        android:id="@+id/game_pont"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/game_level"
        app:layout_constraintEnd_toStartOf="@id/game_time"
        android:gravity="center_vertical|end"
        android:textSize="20sp"
        android:text="@string/points"
        />
    <TextView
        android:id="@+id/game_time"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/game_pont"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical|end"
        android:textSize="20sp"
        android:text="@string/time"
        />
<!--    <androidx.fragment.app.FragmentContainerView-->
<!--        android:id="@+id/fragment_game"-->
<!--        android:name="pt.isec.a2020116565_2020116988.mathgame.fragments.GameFragment"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="350dp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/game_level"-->
<!--        tools:layout="@layout/fragment_game"-->
<!--        />-->
        <pt.isec.a2020116565_2020116988.mathgame.views.GamePanelView
            android:id="@+id/game_table"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_constraintTop_toBottomOf="@+id/game_level"
            android:orientation="horizontal" />


</androidx.constraintlayout.widget.ConstraintLayout>