<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MultiPlayerLbTime"
    android:background="@color/background"
    android:id="@+id/fragment_mp_leaderboard_time"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_mp_lb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mp_leaderboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        app:layout_constraintVertical_bias="0.10"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/tv_mp_lb_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mp_leaderboard_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_mp_lb"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="22sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_mp_lb_time"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_mp_lb_time"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/tv_mp_lb_time_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mp_leaderboard_players"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_mp_lb_time"
        android:gravity="center"
        android:textSize="22sp"
        android:layout_marginTop="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_mp_lb_time_players"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_mp_lb_time_players"
        android:layout_margin="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>